# automated-billing-cli

./: .gitignore  CHANGELOG.md  LICENSE  PR.md  README.md  architecture.md  code-review.md  design-review.md  impl-plan.md  pyproject.toml  requirements.md  test-evidence.md
.github/: copilot-instructions.md
.github/prompts/: 01-architecture-review.prompt.md  02-phase-executor.prompt.md
.github/workflows/: tests.yml
billing_cli/: __init__.py  cli.py  exceptions.py  loader.py  logger.py  pdf_generator.py  renderer.py  validator.py
docs/: 00-evaluation-framework.md  02-architecture-spec.md
samples/: data.json  template.md
tests/: test_cli.py  test_integration.py  test_loader.py  test_pdf_generator.py  test_renderer.py
