[project]
name = "billing-cli"
version = "0.1.0"
description = "Offline CLI tool to generate PDF invoices from JSON data and Jinja2 Markdown templates."
requires-python = ">=3.10"
dependencies = [
        "jinja2>=3.1.5",
    "markdown>=3.5",
    "weasyprint>=63.1",
]
    

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1"
]

[project.scripts]
billing-cli = "billing_cli.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
